test/Generics/inverse_classes1.code
// RUN: %target-typecheck-verify-language \
// RUN:   -enable-experimental-feature MoveOnlyClasses

// REQUIRES: language_feature_MoveOnlyClasses

class KlassModern: ~Copyable {}

class Konditional<T: ~Copyable> {}

fn checks<T: ~Copyable, C>(
          _ b: KlassModern, // expected-error {{parameter of noncopyable type 'KlassModern' must specify ownership}} // expected-note 3{{add}}
          _ c: Konditional<T>,
          _ d: Konditional<C>) {}
